--- a/source/style.css
+++ b/source/style.css
@@ -153,7 +153,7 @@ header .nav li:hover {
 .work li {
   padding: 1rem 0;
   list-style: none;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   border-top: 2px solid var(--background-color);
 }
 
@@ -165,7 +165,7 @@ header .nav li:hover {
 }
 
 .work .project_details .project_title {
-  font-size: 2rem;
+  font-size: 2em;
   margin-bottom: 1rem;
 }
 
@@ -174,5 +174,147 @@ header .nav li:hover {
   height: auto;
   -ms-grid-column-align: end;
       justify-self: end;
+}
+
+.about {
+  padding: 3rem 4rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.about h3 {
+  font-size: 5em;
+  font-style: italic;
+  -webkit-transition: translate 0.3s;
+  transition: translate 0.3s;
+  margin-bottom: 2.5rem;
+  cursor: default;
+  grid-column: span 2;
+}
+
+.about h3:hover {
+  translate: 2rem;
+}
+
+.about img {
+  width: 60%;
+}
+
+.about .about_title {
+  font-size: 3em;
+  font-weight: 400;
+  margin-bottom: 2rem;
+}
+
+.about .about_title span {
+  font-weight: 600;
+  text-decoration: underline;
+}
+
+.about .about_bio {
+  font-size: 1.5em;
+  margin-bottom: 2rem;
+  width: 75%;
+  text-align: justify;
+}
+
+.about .about_bio span {
+  font-weight: 500;
+}
+
+.contact {
+  margin-top: 7rem;
+  padding: 3rem 4rem;
+  background-color: var(--main-color);
+  color: var(--background-color);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contact h3 {
+  font-size: 5em;
+  font-style: italic;
+  -webkit-transition: translate 0.3s;
+  transition: translate 0.3s;
+  margin-bottom: 2.5rem;
+  cursor: default;
+  grid-column: span 2;
+}
+
+.contact h3:hover {
+  translate: 2rem;
+}
+
+.contact p {
+  text-align: center;
+  font-size: 3em;
+}
+
+.contact form {
+  padding-top: 3rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  width: 50%;
+  margin: auto;
+}
+
+.contact form label {
+  font-size: 1.5em;
+}
+
+.contact form input {
+  padding: 0.75rem;
+  margin: 0.25rem 0 1.5rem 0;
+  font-size: 1.25em;
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid var(--background-color);
+  outline: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: var(--background-color);
+}
+
+.contact form input:focus {
+  background-color: var(--background-color);
+  color: var(--main-color);
+}
+
+.contact form .submit {
+  width: 100px;
+  margin: auto;
+  border: 2px solid var(--background-color);
+  border-top: none;
+  translate: 0 15px;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+.contact form .submit:focus {
+  translate: 0 20px;
+}
+
+footer {
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer p {
+  margin: auto;
+  font-size: 1.1rem;
 }
 /*# sourceMappingURL=style.css.map */
