--- a/source/style.scss
+++ b/source/style.scss
@@ -131,7 +131,7 @@ header {
     li {
         padding: 1rem 0;
         list-style: none;
-        font-size: 1.5rem;
+        font-size: 1.5em;
         border-top: 2px solid var(--background-color);
     }
 
@@ -140,7 +140,7 @@ header {
         grid-template-columns: 1fr 1fr;
 
         .project_title {
-            font-size: 2rem;
+            font-size: 2em;
             margin-bottom: 1rem;
         }
     }
@@ -148,5 +148,132 @@ header {
         width: 70%;
         height: auto;
         justify-self: end;
+    }
+}
+
+.about {
+    padding: 3rem 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+
+    h3 {
+        font-size: 5em;
+        font-style: italic;
+        transition: translate 0.3s;
+        margin-bottom: 2.5rem;
+        cursor: default;
+        grid-column: span 2;
+    }
+
+    h3:hover {
+        translate: 2rem;
+    }
+
+    img {
+        width: 60%;
+    }
+
+    .about_title {
+        font-size: 3em;
+        font-weight: 400;
+        margin-bottom: 2rem;
+
+        span {
+            font-weight: 600;
+            text-decoration: underline;
+        }
+    }
+
+    .about_bio {
+        font-size: 1.5em;
+        margin-bottom: 2rem;
+        width: 75%;
+        text-align: justify;
+
+        span {
+            font-weight: 500;
+        }
+    }
+}
+
+.contact {
+    margin-top: 7rem;
+    padding: 3rem 4rem;
+    background-color: var(--main-color);
+    color: var(--background-color);
+    justify-content: center;
+    
+    h3 {
+        font-size: 5em;
+        font-style: italic;
+        transition: translate 0.3s;
+        margin-bottom: 2.5rem;
+        cursor: default;
+        grid-column: span 2;
+    }
+
+    h3:hover {
+        translate: 2rem;
+    }
+
+    p {
+        text-align: center;
+        font-size: 3em;
+    }
+
+    form {
+        padding-top: 3rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 50%;
+        margin: auto;
+
+        label {
+            font-size: 1.5em;
+        }
+
+        input {
+            padding: 0.75rem;
+            margin: 0.25rem 0 1.5rem 0 ;
+            font-size: 1.25em;
+            background-color: transparent;
+            border: none;
+            border-bottom: 2px solid var(--background-color);
+            outline: none;
+            transition: all 0.3s;
+            color: var(--background-color);
+        }
+
+        input:focus {
+            background-color: var(--background-color);
+            color: var(--main-color);
+        }
+
+        .submit {
+            width: 100px;
+            margin: auto;
+            border: 2px solid var(--background-color);
+            border-top: none;
+            translate: 0 15px;
+            transition: all 0.1s;
+        }
+
+        .submit:focus {
+            translate: 0 20px;
+        }
+    }
+
+}
+
+footer {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
+
+    p {
+        margin: auto;
+        font-size: 1.1rem;
     }
 }
